[package]
name = "rust-os"
version = "0.1.0"
authors = ["nikeedev <nikita.gon.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic


# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

